terraform/elb.tf
# ------------------------------
# ALB
# ------------------------------
resource "aws_lb" "alb" {
  name               = "${var.project}-${var.environment}-app-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups = [
    aws_security_group.web_sg.id
  ]
  subnets = [
    aws_subnet.public_subnet_1a.id,
    aws_subnet.public_subnet_1c.id,
  ]
}

resource "aws_lb_listener" "alb_listener_http" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_target_group.arn
  }
}

resource "aws_lb_listener" "alb_listener_https" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.tokyo_cert.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_target_group.arn
  }
}

# resource "aws_lb_listener_rule" "http_rule" {
#   listener_arn = aws_lb_listener.alb_listener_http.arn

#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.lb_target_group.id
#   }

#   condition {
#     path_pattern {
#       values = ["*"]
#     }
#   }
# }

# resource "aws_lb_listener_rule" "https_rule" {
#   listener_arn = aws_lb_listener.alb_listener_https.arn

#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.lb_target_group.id
#   }

#   condition {
#     path_pattern {
#       values = ["*"]
#     }
#   }
# }

# ------------------------------
# target group
# ------------------------------
resource "aws_lb_target_group" "alb_target_group" {
  name     = "${var.project}-${var.environment}-app-tg"
  port     = 8000
  protocol = "HTTP"
  vpc_id   = aws_vpc.vpc.id

  tags = {
    Name    = "${var.project}-${var.environment}-app-tg"
    Project = var.project
    Env     = var.environment
  }
}

resource "aws_lb_target_group_attachment" "instance" {
  target_group_arn = aws_lb_target_group.alb_target_group.arn
  target_id        = aws_instance.app_server.id
}
